--- a/pages/abcellera.html
+++ b/pages/abcellera.html
@@ -55,6 +55,8 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
+
 
                <h1 class="company-name">AbCellera</h1>
 
@@ -105,7 +107,7 @@
                               I would value that at .5x multiplier. That would make the pipeline worth about $1 billion in value.
                          </p>                     
                          <p class="profiles">
-                              All in that is a $2.368 billion market cap. Based on the 286 million shares outstanding
+                              All in, that is a $2.368 billion market cap. Based on the 286 million shares outstanding
                               on the 10Q, that comes to $8.27.
                          </p>
                     </section>  
