--- a/pages/beam.html
+++ b/pages/beam.html
@@ -55,6 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">Beam Therapeutics</h1>
 
@@ -150,7 +151,7 @@
                               I would give it a .1 multiplier since its still preclinic. That would make it worth $500 million value.
                          </p>
                          <p class="profiles">
-                              All in that is a $2.15 billion market cap. Based on the 70 millon shares outstanding
+                              All in, that is a $2.15 billion market cap. Based on the 70 millon shares outstanding
                               on the 10Q, that comes to $30.71. 
                          </p>
                     </section>  
