--- a/pages/companies.html
+++ b/pages/companies.html
@@ -111,8 +111,12 @@
                <section>
                     <h2 class="list-header">iPSC</h2>
                     <ol>
-                         <li class="tech-list">Century Therapeutics</li>
-                         <li class="tech-list">Sana Biotechnology</li>
+                         <li class="tech-list">
+                              <a href="../pages/ipsc.html">Century Therapeutics (IPSC)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/sana.html">Sana Biotechnology (SANA)</a>
+                         </li>
                          <li class="tech-list">Fate Therapeutics</li>
                          <li class="tech-list">Caribou Biosciences</li>
                     </ol>
