--- a/pages/excientia.html
+++ b/pages/excientia.html
@@ -55,6 +55,8 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
+
 
                <h1 class="company-name">Exscientia</h1>
 
@@ -64,7 +66,7 @@
                     <section class="section-container">
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
-                              Exscientia is developing Artificial Intelligence (AI) for use in discovery of new drugs 
+                              Exscientia is developing Artificial Intelligence for use in discovery of new drugs 
                               and clinical therapies. Their first platform is about using single cell genomics data 
                               to allow Artificial Intelligence to model the best combination of drugs in cancer therapies. 
                               Their second platform is about using Artificial Intelligence to take all the collected information 
@@ -141,8 +143,8 @@
                               CDK7:
                               Their next drug is for CDK7. This could be a big indication as CD4/6k inhibitors do over $5 billion 
                               a year. This would be used in combination. I think they could see $1 billion sales depending on the
-                              data. This program is owned 50% by Exscientia. It is still in the preclinic. I would give them a .5x 
-                              multiple for a $500 million in value.
+                              data. This program is owned 50% by Exscientia. It is still in the preclinic. I would give them a .1 
+                              multiple for a $100 million in value.
                          </p>
                          <p class="profiles">
                               NLRP3:
@@ -152,8 +154,8 @@
                               worth of value.
                          </p>
                          <p class="profiles">
-                              All in that is a $2.22 billion market cap. Based on the 121 million shares outstanding
-                              on the financial reports, that comes to $18.34.
+                              All in, that is a $1.61 billion market cap. Based on the 121 million shares outstanding
+                              on the financial reports, that comes to $13.30.
                          </p>
                     </section>  
 
