--- a/pages/intellia.html
+++ b/pages/intellia.html
@@ -55,6 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">Intellia Therapeutics</h1>
 
@@ -134,7 +135,7 @@
                               NTLA-6001 is a CAR-T therapy for Lymphoma. I don't think I will give this program any value at all.
                          </p>
                          <p class="profiles">
-                              All in that is a $3.3 billion market cap. Based on the 79 shares outstanding
+                              All in, that is a $3.3 billion market cap. Based on the 79 shares outstanding
                               on the 10Q, that comes to $41.77. 
                          </p>
                     </section>  
