--- a/pages/ipsc.html
+++ b/pages/ipsc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Schrodinger Profile</title>
+          <title>Cnetury Therapeutics Profile</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,8 +57,7 @@
           <main>
                <p class="updated">Last Updated 1/12/2023</p>
 
-
-               <h1 class="company-name">Schrodiner</h1>
+               <h1 class="company-name">Century Therapeutics</h1>
 
                <div  class="company-layout">
 
@@ -66,95 +65,98 @@
                     <section class="section-container">
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
-                              They are developing software used for drug discovery. Their primary software is about
-                              physics based chemistry to design molecules. They are focused on translating physics based 
-                              chemistry into computer aided design.
-                              They have added a lot of other software around
-                              the drug discovery process to include Artificial Intelligence and Machine Learning. They use the 
-                              software that develops the chemitry models to train the machine learing algorithms.
-                              They license this software to other companies. They recently started
-                              using their own software to develop their own pipeline. 
+                              Century is building a platform around induced Pluripotent Stem cells. They take donor 
+                              cells and program them back into the stem cell state by adding in transcription factors.
+                              Then they edit those stem cells before developing them down the lineage to immune cells like 
+                              NK cells and Gamma/Delta T cells. This technology is engineering cells for immune therapies for cancer. 
+                              They build these common progenitor cells that have many edits to give them extra benefits and allo 
+                              evasion attributes. These common progenitor cells can become a starting stock for all their CAR-NK and 
+                              CAR-T cells. Once they have the master banks of commong progenitor cells, they can use them 
+                              for all their new therapies by just inserting different CAR receptors into them before developing 
+                              them down their path to NK or T cells.
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Pipeline</h2>
                          <p class="profiles">
-                              SGR-1505 - MALT1 <progress class="progress-bar" value="20" max="100"></progress>
+                              CNTY-101 CD19 iNK <progress class="progress-bar" value="25" max="100"></progress>
                               Phase 1
                          </p>
                          <p class="profiles">
-                              SGR-2291 - CDC7 <progress class="progress-bar" value="10" max="100"></progress>
-                              IND Enabling Studies
+                              CNTY-102 CD19/CD79 iT <progress class="progress-bar" value="10" max="100"></progress>
+                              Preclinical
                          </p>
                          <p class="profiles">
-                              Wee1 <progress class="progress-bar" value="5" max="100"></progress>
-                              Preclinic
+                              CNTY-107 Nectin4 <progress class="progress-bar" value="5" max="100"></progress>
+                              Preclinical
                          </p>
                     </section> 
                     
                     <section class="section-container">
                          <h2 class="list-header">Science</h2>
                          <p class="profiles">
-                              SGR-1505 - Their first drug is for MALT1. This is a Caspase Activation and Recruitment 
-                              Domain (CARD). This plays a role in B cell activation. This plays a role in some B cell related 
-                              cancers. There is no data yet from this program. 
+                              CNTY-101 is their CAR-NK cell that has the alloevasion edits and a CD19 CAR. This is their original program for 
+                              CAR-NK cells currently starting phase 1. The alloevasion will allow us to compare this technology to other allogeneic 
+                              cell therapies targeting CD19. This data will inform us of the benefits, if any, of the alloevasion 
+                              technology.
                          </p>
                          <p class="profiles">
-                              SGR-2291 - Their second drug is for CDC7. This plays a role in the cell cycle and the initiation 
-                              of DNA replication. It could partner with current CDK4/6 inhibitors which do about $5 billion a year 
-                              in sales. There is no data yet for this program.
+                              CNTY-102 is their first CAR-T program using the Gamma/Delta progenitor cells. This will have a dual target
+                              with CD19 and CD79. This will have many of the common progenitor cell edits for their Gamma/Delta T cell 
+                              platform. This will inform us as to the potential of using Gamma/Delta T cells as cell therapies. They will 
+                              also include the alloevasion edits. This is currently in IND enabling studies.
                          </p>
                          <p class="profiles">
-                              Wee1 - This target is one that has been attempted before by other companies, and it hasn't done so well.
-                              Those companies did not have this level of software assisted engineering. We will have to wait and see 
-                              the data, but there is always room for this to succeed where others have failed. This plays a role in the 
-                              cycle. This comes in during the last cell checkpoint before moving into mitosis.
+                              CNTY-107 is their first program that will target a solid tumor antigen with Nectin 4. This has a large potential
+                              application in solid tumors. They have not selected yet if this program will be NK or Gamma/Delta T cells. I suspect 
+                              they will test both sources before they settle on a final development candidate.
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Valuation</h2>
                          <p class="profiles">
-                              Cash $597
+                              Cash $395 million
                          </p>
                          <p class="profiles">
-                              Sales are projected to be $194 million in revenues for 2023 with their software side of the business. 
-                              The classic Price to Sales goes from 10x to 14x. Even at 10x that gets you $194 million * 10 for
-                              = $1.9 billion value.
+                              CNTY-101 is for CD19 which affects B cell lymphomas. This is about 75,000 patients each year. 
+                              It is a very competitive target for blood cancers. There is still room for a best in class therapy 
+                              should the alloevasion make a difference in durability. I would give this $500 million sales unless it 
+                              has some best in class data. No phase 1 data gives it a .1 multiple. That puts the value at $50 million.
                          </p>
                          <p class="profiles">
-                              MALT1 could be upward of $750 million for B cell related cancers. It won't work in all B cell cancers. 
-                              It will be a subset that is driven by MALT1 signaling. Even so, there are limited targeted therapies
-                              for those patients. If I give it a .1 multiplier since it has no data, I would get $75 million value.
+                              CNTY-102 This is for CD19/CD70 bispecific Gamma/Delta T cell programs focused on B cell lymphomas. I would 
+                              think this could have the same potential as CNTY-101 unless the data stands out as the best in class therapy.
+                              That would be $500 million in sales. It would only have a .1 multiplier for being preclinical. That comes 
+                              out to $50 million value.
+                         <p class="profiles">
+                              CNTY-107 is for solid tumors. I think this could be worth $1 billion or more depending on how well the data 
+                              works out. I would give it a multiple of .1 for preclinical. That comes out to $100 million value. 
                          </p>
                          <p class="profiles">
-                              CDC7 could do well over $1 billion in sales if it works well with CDK4/6 inhibitors which earn about $5 billion
-                              a year. Even if it is only used in a small percentage of those patients, it could reach that $1 billion sales
-                              potential. This is still in development so I would only give it a .1 multiplier. That puts it at about $100
-                              million in value.
-                         </p>
-                         <p class="profiles">
-                              All in, that is a $2.11 billion market cap. Based on the 71 million shares outstanding
-                              on the 10Q, that comes to $29.78.
+                              All in, that is a $595 million market cap. Based on the 59 million shares outstanding, that comes to $10.08.
                          </p>
                     </section>  
 
                     <section class="section-container">
                          <h2 class="list-header">Events</h2>
                          <p class="profiles">
-                              SGR-1505 Phase 1 Enrolling
+                              CNTY-101 Phase 1 Enrolling
                          </p>
                          <p class="profiles">
-                              SGR-2291 IND Enabling Studies
+                              CNTY-102 IND Enabling Studies
+                         </p>
+                         <p class="profiles">
+                              CNTY-107 Preclinical
                          </p>
                     </section> 
 
                     <section class="section-container">
                          <h2 class="list-header">Data Readouts</h2>
                          <p class="profiles">
-                            No Clinical Data Yet.
-                         </p>
+                              Not Data Yet.
+                          </p>
                     </section> 
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
