--- a/pages/prime.html
+++ b/pages/prime.html
@@ -55,6 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">Prime Medicine</h1>
 
@@ -72,7 +73,7 @@
                               about this technology as it has not been tested as extensively as it should be. The Reverse Transcriptase
                               makes about 1 mistake every 100,000 bases. That might not sound like a lot, but when editing millions of 
                               cells in a human, that is hundreds of mistakes that get introduced into a gene. There is no way to predict
-                              what kind of side effect could come from these many mutations.
+                              what kind of side effects could come from these many mutations.
                          </p>
                     </section>  
 
@@ -108,7 +109,7 @@
                          <p class="profiles">
                               Cystic Fibrosis is another target they are focused on. This is in the lungs. We have seen many companies try to 
                               deliver using LNP in the lungs, and they all failed badly. This is another indication where they lack delivery.
-                              They will need to find or invest in a new vector to make this work. This company is going to do a lot of inventing
+                              They will need to find or invest in a new vector to make this work. This company will need to do a lot of inventing
                               that isn't related to Prime Editing to make these programs work.
                          </p>
                          <p class="profiles">
@@ -144,7 +145,7 @@
                               I won't give any value to these programs yet.
                          </p>
                          <p class="profiles">
-                              All in that is a $916 million market cap. Based on the 97 million shares outstanding, that comes to $9.44.
+                              All in, that is a $916 million market cap. Based on the 97 million shares outstanding, that comes to $9.44.
                          </p>
                     </section>  
 
