--- a/pages/recursion.html
+++ b/pages/recursion.html
@@ -55,6 +55,8 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
+
 
                <h1 class="company-name">Recursion Pharma</h1>
 
@@ -64,10 +66,11 @@
                     <section class="section-container">
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
-                              Recursion is using robots to do experiments and collect data. They have a lab
+                              Recursion is using robots to do experiments and collect data. 
+                              They are using technology to map biology. They have a lab
                               where they can conduct millions of experiments every week. All that data is
                               collected into their Biohive supercomputer. This can be mined by using Artificial
-                              Intelligence (AI) and Machine Learning (ML). They can collect all the genotype 
+                              Intelligence and Machine Learning. They can collect all the genotype 
                               and phenotype data by using CRISPR to knock out each gene one at a time and 
                               recording all the changes. This could lead us to discovering new connections
                               between genetics and biology. 
@@ -138,7 +141,7 @@
                               make it worth another $750 million value
                          </p>
                          <p class="profiles">
-                              All in that is a $2.841 billion market cap. Based on the 164 million shares outstanding
+                              All in, that is a $2.841 billion market cap. Based on the 164 million shares outstanding
                               on the 10Q, that comes to $17.32.
                          </p>
                     </section>  
