--- a/pages/relay.html
+++ b/pages/relay.html
@@ -55,12 +55,12 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">Relay Therapeutics</h1>
 
                <div  class="company-layout">
 
-               
                     <section class="section-container">
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
@@ -73,7 +73,7 @@
                               can use other AI technologies to develop drugs against impossible targets. They will use
                               AI to help screen targets and model the dynamics of these molecules for safety and efficacy.
                               They use Machine Learning to screen thousands of possible drug candidates to pick the perfect
-                              ones that are worth moving into the clinics. They are using these technologies to take on
+                              ones that are worth moving into the clinic. They are using these technologies to take on
                               some of the most toxic targets in Oncology. 
                          </p>
                     </section>  
@@ -149,7 +149,7 @@
                               =$300 million value
                          </p>
                          <p class="profiles">
-                              All in that is a $2.65 billion market cap. Based on the 120,894,901 shares outstanding
+                              All in, that is a $2.65 billion market cap. Based on the 120 million shares outstanding
                               on the 10Q, that comes to $21.91.
                          </p>
                     </section>  
@@ -183,6 +183,7 @@
                               </a>
                          </p>
                     </section> 
+               
                     <p>&#42; These are my Opinions and Estimates. They should not be considered financial advice.</p>
                </div>
 
