--- a/pages/twist.html
+++ b/pages/twist.html
@@ -55,6 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">Twist Bioscience</h1>
 
@@ -117,10 +118,10 @@
                          <p class="profiles">
                               They have an entire pipeline of partners in the antibodies development space. It is really hard to value this 
                               pipeline right now until we know more about the programs and the data they achieve. We don't know what kind 
-                              of milestones or royalties they get on these programs. This could be a huge drive of value in the future. 
+                              of milestones or royalties they get on these programs. This could be a huge driver of value in the future. 
                          </p>
                          <p class="profiles">
-                              All in that is a $1.83 billion market cap. Based on the 54 million shares outstanding , that comes to $33.88.
+                              All in, that is a $1.83 billion market cap. Based on the 54 million shares outstanding , that comes to $33.88.
                          </p>
                     </section>  
 
