--- a/pages/verve.html
+++ b/pages/verve.html
@@ -55,6 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">Verve Therapeutics</h1>
 
@@ -116,7 +117,7 @@
                               of development. That comes out to another $80 million value.
                          </p>
                          <p class="profiles">
-                              All in that is a $710 million market cap. Based on the 61 million shares outstanding, that comes to $11.63.
+                              All in, that is a $710 million market cap. Based on the 61 million shares outstanding, that comes to $11.63.
                          </p>
                     </section>  
 
