--- a/pages/ginkgo.html
+++ b/pages/ginkgo.html
@@ -55,6 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
+               <p class="updated">Last Updated 1/12/2023</p>
 
                <h1 class="company-name">Ginkgo Bioworks</h1>
 
@@ -65,8 +66,12 @@
                          <h2 class="list-header">Profile</h2>
                          <p class="profiles">
                               Ginkgo is the leader in Synthetic Biology. They are focused on 2 key franchises with synthetic
-                              biology and biosecurity. The foundry and codebase make up their synthetic biology platform. Their 
-                              subsidiary Concentric is focused on biosecurity solutions. 
+                              biology and biosecurity. The foundry and codebase make up their synthetic biology platform. Synthetic Biology 
+                              brings together cell engineering, chemistry and genetic editing to alter the DNA of cells to create new organisms 
+                              with new purpose. Their subsidiary Concentric is focused on biosecurity solutions. This is about developing 
+                              technologies to detect, test, track and predict pathogens and outbreaks. We live in a world where bioterrorism 
+                              is one of the biggest risks we face. Biosecturity is necessity we hope will be built to protect people before 
+                              an event makes it reactive instead of proactive.
 
                          </p>
                     </section>  
@@ -82,8 +87,8 @@
                     <section class="section-container">
                          <h2 class="list-header">Science</h2>
                          <p class="profiles">
-                              The foundry is all about engineering living organisms. All cells are encoded with DNA regardless of the 
-                              organism. It doesn't matter if it is a human T cell, a bacteria or a yeast cell. If you learn how to change the 
+                              The foundry is all about engineering living organisms. Cells are encoded with DNA which acts as the programming for that cell. 
+                              It doesn't matter if it is a human T cell, a bacteria or a yeast cell. If you learn how to change the 
                               DNA of living cells, you can recode their programming to make them do whatever you want. The codebase is that 
                               database that Ginkgo has for all that genetic programming information. With synthetic biology, we can rewrite life
                               and create new organisms with new purposes. This can be a yeast that makes a mediation or ingredient for manufacturing.
@@ -94,8 +99,8 @@
                          <p class="profiles">
                               Biosecurity is about protecting this new world of biology from pathogens that can harm us. This is about tracking 
                               and preventing pandemics. We live in a world where we have the tools for bad people to create a pathogen that could
-                              wipe out the entire world. We have to have the tools to be able to detect, track, contain and prevent these types 
-                              of events. Pathogens do not respect borders so this is a global threat. Not taking the steps to prevent the next bad
+                              wipe out the entire world. We need to have the tools to be able to detect, track, contain and prevent these types 
+                              of events. Pathogens do not respect borders which makes this is a global threat. Not taking the steps to prevent the next bad
                               pandemic won't stop it from happening. The biosecurity franchise is all about building the tools to test and the 
                               software to track and model outbreaks.
                          </p>
@@ -116,13 +121,13 @@
                               based on realistic price to sales on their current foundry sales.
                          </p>
                          <p class="profiles">
-                              Biosecurity has been really strong since Covid. There is some concern it could fall off in sales as Covid sales 
+                              Biosecurity has been really strong since Covid. There is some concern it could fall off as Covid sales 
                               fade. This hasn't happened yet as Covid has shown us how poorly prepared we were as a country and as a world to deal 
                               with pandemics. Right now, they are doing $300 million in biosecurity sales. That gives it a value of about $3 billion 
                               in value based on a realistic price to sales. 
                          </p>
                          <p class="profiles">
-                              All in that is a $5.3 billion market cap. Based on the 1.6 billion shares outstanding , that comes to $3.31.
+                              All in, that is a $5.3 billion market cap. Based on the 1.6 billion shares outstanding , that comes to $3.31.
                          </p>
                     </section>  
 
