--- a/pages/beam.html
+++ b/pages/beam.html
@@ -55,7 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p class="updated">Last Updated 1/12/2023</p>
+               <p class="updated">Last Updated 1/13/2023</p>
 
                <h1 class="company-name">Beam Therapeutics</h1>
 
@@ -69,11 +69,12 @@
                               it to alter a single base in the DNA. It uses a form of the CAS9 enzyme called a Nickase. This 
                               version of CAS9 is 
                               developed with only 1 of the nucleases active so that it can only cut a single strand of the DNA. 
-                              It attaches a deaminase enzyme to the CAS9 nickase. This enzyme plucks an amino group from the DNA base. 
+                              It uses a deaminase enzyme attached to the CAS9 nickase. This enzyme plucks an amino group from the DNA base. 
                               This facilitates the transition of that  base from an Adenine to Guanine or a Cytosine to a Thymine.
                               Then it cuts the unedited strand which allows the DNA repair machinery to use the changed base to fix the 
                               mismatch of bases after deamination. Beam 
-                              is the only company that owns this technology. They do license it to other companies for use.
+                              is the only company that owns this technology. They do license it to other companies for use. Beam is also 
+                              working on next generation base editors.
                          </p>
                     </section>  
 
@@ -117,6 +118,17 @@
                               BEAM-201 is a CAR-T therapy that is engineered using base editing. It targets the CD7 protein on T cells. 
                               This is designed for T cell based ALL. Most of ALL is B cell, and there are many companies working in this space.
                               T cell ALL is one area where new therapies are needed. This is starting phase 1 and has no data yet.
+                         </p>
+                         <p class="profiles">
+                              BEAM-301 is a gene editing product targeting the G6PC gene that has a single base mutation. Their therapy 
+                              targets flipping that single base back to the wild type. Mouse models show modest return to normal fasting
+                              glucose. This affects only the R83C mutation of the GSDIa disease. They plan to submit an IND in early 2024.
+                         </p>
+                         <p class="profiles">
+                              BEAM-302 is a gene editing product targeting the E342K mutation of AATD. This is a single base mutation. They have a 
+                              therapy that attempts to base editing that single base mutation back into the wild type. The mouse models shows 
+                              modest return of normal A1AT protein. There is a by-stander edit in this therapy resulting in a variant of D341G.
+                              The data suggests this variant functions normally. They plan to file and IND in early 2024.
                          </p>
                     </section>  
 
@@ -168,7 +180,10 @@
                               BEAM-201 Initiating Phase 1 and plans to dose first patient by mid 2023
                          </p>
                          <p class="profiles">
-                              BEAM-301 Working toward IND
+                              BEAM-301 Working toward IND in early 2024
+                         </p>
+                         <p class="profiles">
+                              BEAM-302 Working toward IND in early 2024
                          </p>
                     </section> 
 
