--- a/pages/excientia.html
+++ b/pages/excientia.html
@@ -55,7 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p class="updated">Last Updated 1/12/2023</p>
+               <p class="updated">Last Updated 1/13/2023</p>
 
 
                <h1 class="company-name">Exscientia</h1>
@@ -87,7 +87,7 @@
                          </p>
                          <p class="profiles">
                               GTAEXS-617 - CDK7 <progress class="progress-bar" value="10" max="100"></progress>
-                              IND Enabling
+                              Phase 1
                          </p>
                          <p class="profiles">
                               NLRP3 <progress class="progress-bar" value="5" max="100"></progress>
@@ -162,13 +162,13 @@
                     <section class="section-container">
                          <h2 class="list-header">Events</h2>
                          <p class="profiles">
-                              EXALT 1 Phase 1 Ongoing
+                              EXALT 1 Phase 1
                          </p>
                          <p class="profiles">
-                              EXS-21546 Phase 1 ongoing
+                              EXS-21546 Phase 1 Enroll 1st Patient in 1H of 2023
                          </p>
                          <p class="profiles">
-                              GTAEXS-617 IND Enabling
+                              GTAEXS-617 Phase 1 Enroll 1st Patient in 1H of 2023
                          </p>
                     </section> 
 
