--- a/pages/ginkgo.html
+++ b/pages/ginkgo.html
@@ -55,7 +55,7 @@
           <!--Here Starts the Main Body-->
 
           <main>
-               <p class="updated">Last Updated 1/12/2023</p>
+               <p class="updated">Last Updated 1/13/2023</p>
 
                <h1 class="company-name">Ginkgo Bioworks</h1>
 
@@ -70,7 +70,7 @@
                               brings together cell engineering, chemistry and genetic editing to alter the DNA of cells to create new organisms 
                               with new purpose. Their subsidiary Concentric is focused on biosecurity solutions. This is about developing 
                               technologies to detect, test, track and predict pathogens and outbreaks. We live in a world where bioterrorism 
-                              is one of the biggest risks we face. Biosecturity is necessity we hope will be built to protect people before 
+                              is one of the biggest risks we face. Biosecturity is a necessity we hope will be built to protect people before 
                               an event makes it reactive instead of proactive.
 
                          </p>
