--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta name="description" content="Learning and Education on Biotech Concepts">
+          <meta name="description" content="Learning and Education on Biotechnology Concepts">
           <meta name="author" content="CoderKid2k">
 
           <link rel="stylesheet" href="styles/header.css">
